Commit #23 - Mobile: Fixing spacing issue on scores page

--- a/styles/scores.css
+++ b/styles/scores.css
@@ -972,45 +972,59 @@ body {
 	}
 	#game7 {
 		width: 100%;
+		margin-top: 5%;
 	}
 	#game8 {
 		width: 100%;
+		margin-top: 5%;
 	}
 	#game9 {
 		width: 100%;
+		margin-top: 5%;
 	}
 	#game10 {
 		width: 100%;
+		margin-top: 5%;
 	}
 	#game11 {
 		width: 100%;
+		margin-top: 5%;
 	}
 	#game12 {
 		width: 100%;
+		margin-top: 5%;
 	}
 	#game13 {
 		width: 100%;
+		margin-top: 5%;
 	}
 	#game14 {
 		width: 100%;
+		margin-top: 5%;
 	}
 	#game15 {
 		width: 100%;
+		margin-top: 5%;
 	}
 	#game16 {
 		width: 100%;
+		margin-top: 5%;
 	}
 	#game17 {
 		width: 100%;
+		margin-top: 5%;
 	}
 	#game18 {
 		width: 100%;
+		margin-top: 5%;
 	}
 	#game19 {
 		width: 100%;
+		margin-top: 5%;
 	}
 	#game20 {
 		width: 100%;
+		margin-top: 5%;
 	}
 	#game1Names {
 		font-size: 18px;
